--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
 node_modules
 .next
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build output
+dist
+build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
