--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-is": "^19.2.3",
+    "react-use-websocket": "^4.13.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0"
   },
