--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
     "@fontsource/jetbrains-mono": "^5.2.8",
+    "@number-flow/react": "^0.5.10",
     "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "mongoose": "^9.1.1",
+    "motion": "^12.24.0",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
