--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ JWT_SECRET=your_secure_jwt_secret_key_here
 
 # Optional: API URL (leave empty for same domain)
 NEXT_PUBLIC_API_URL=
+
+# Google OAuth Credentials
+# Get these from Google Cloud Console -> APIs & Credentials -> OAuth 2.0 Client IDs
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
