--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ NEXT_PUBLIC_API_URL=
 # Get these from Google Cloud Console -> APIs & Credentials -> OAuth 2.0 Client IDs
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# Telegram Bot Configuration
+# Get these from @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=YOUR_TOKEN_HERE
+NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=your_telegram_bot_username_here
